fix: add strokes to floating SVG icons for higher contrast

--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -760,6 +760,13 @@
   display: none;
 }
 
+.floating-actions .floating-play-button circle {
+  /* see also: .icon-light-stroke */
+  stroke-width: 2px;
+  paint-order: stroke;
+  stroke: var(--mb-gray-3);
+}
+
 @media (max-width: 900px) { /* --two-to-three-columns */
   .floating-actions {
     right: 1rem;
